deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ritm
  labels:
    app: ritm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ritm
  template:
    metadata:
      labels:
        app: ritm
    spec:
      containers:
        - name: ritm
          image: wbe7/ritm:v1.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: dir
              mountPath: /uploads
          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
      volumes:
        - name: dir
          emptyDir:
            sizeLimit: 500Mi
