deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ritm-svc
spec:
  selector:
    app: ritm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
